# SimplexColorSpace

./: .gitignore  LICENSE  README.md  README_FR.md  leaderboard.md  pyproject.toml  scs_demo.html
article/: PT_COLOR.tex  PT_COLOR_FR.tex
article/shared/: pt-common.sty
colormaps/: scs_colormap.py  sct_colormap.py
colormaps/data/: brain_mri_mni152.npy  elevation_fuji_etopo.npy  ndvi_forest.npy  sst_pacific_noaa.npy
datasets/: COMBVD_3813.csv  bfd_c.csv  bfd_d65.csv  bfd_p_combined.csv  combvd_bfd-p_m.csv  combvd_witt.csv  leeds.csv  rit_dupont.csv  scs_cam02_hybrid_results.csv  test_dataset_500.csv  v4_bold_response.csv  v4_neural_transfer.csv  witt_original.csv
demonstration/: demo.html  module01_read_a_color_in_scs.html  module03_skin_tone_protection.html  module04_equilibrium.html  module07_black_and_white_from_scs.html  module08_scs_vs_cielab_dark_region.html  module09_scs_vs_oklab.html
docs/: api.md  colormaps.md  grade-format.md  scs_cam02_results_raw.txt  theory.md  v4_neural_results_raw.txt  v4_results.md
saturation_study/: config.js  i18n.js  index.html  results.html  study.html  study.js  study_staircase.html  study_staircase.js  thankyou.html
scripts/: delta_e_scs.py  delta_e_scs00.py  delta_e_sct.py  delta_e_sct00.py  macadam_test.py  model20_deep_analysis.py  pt_matrix.py  push_beyond_ciede2000.py  scs.py  scs_cam02_hybrid.py  scs_ciede2000_analysis.py  scs_companion.py  sct.py  sct_ciede2000_analysis.py  sct_companion.py  v4_analysis_plots.py  v4_hybrid_model.py  v4_neural_extraction.py  v4_refined_analysis.py  v4_summary.py
scs/: __init__.py
(+4 files in other folders)
